# modulix-core-utils

./: .gitignore  Cargo.toml  build.rs  flake.nix
examples/: doc.rs  filesystem.rs  firefox.rs  firewall.rs  flake_input.rs  hardware.rs  init.rs  local.rs  locale.rs  package.rs  steam.rs  test.rs  test2.rs  user.rs
src/: edit_list.rs  edit_option.rs  error.rs  filesystem.rs  firewall.rs  hardware_config.rs  init.rs  lib.rs  locale.rs  modulix_modules.rs  package.rs  user.rs
src/config_store/: mod.rs
src/core/: README.md  list.rs  localise_option.rs  mod.rs  option.rs  param.rs  tests_localise_option.rs  user.rs  utils.rs  write_file.rs
src/core/transaction/: file_lock.rs  file_lock_tests.rs  mod.rs  mod_tests.rs  transaction.rs  transaction_tests.rs
src/desktop_environment/: mod.rs
src/desktop_environment/gnome/: dconf.rs  gtk.rs  mod.rs
src/desktop_environment/plasma/: config.rs  mod.rs  storage.rs
src/detect_hardware/: driver_config.rs  hardware_driver.rs  mod.rs
src/detect_hardware/system_info/: computer_info.rs  cpu_info.rs  mod.rs  vga_info.rs
src/edit_ast/: edit_list_ast.rs  edit_option_ast.rs  mod.rs  utils.rs
src/filesystem/: edit_filesystem.rs  mod.rs
src/flake_input/: mod.rs  tests.rs
src/package/: desktop_icon.rs  mod.rs
src/transaction/: file_lock.rs  mod.rs  option.rs  transaction.rs
src/utils/: mod.rs
